--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   gtag('config', 'G-QW6NPLQPRW');
 </script>
 	
-	<title>Jakob Brounstein</title>
+	<title>Abdulmuttolib Salako</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -53,8 +53,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a style="color:#e01709" href="research.html">Research</a></li>
-                <li><a href="teaching.html">Teaching</a></li>  
-                <li><a href="misc.html">Non-econ miscellanea</a></li> 
             </ul>
         </div>
     </nav>
@@ -67,12 +65,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <!-- Publications -->
             <div class="col-md-8" style="min-height: 100vh; height: auto;">    
-                <h2 id="research">Research</h2>
+                <h2 id="research">RESEARCH</h2>
             
-                <strong>Economics journal articles</strong><br/>
+                <strong>Published Articles</strong><br/>
                 <ul>
-                <li class="paper" words="Homelessness, panhandling, urban economics">
-                    <strong> What happens when you give money to panhandlers? The case of downtown Manhattan. </strong> (with Dordick, G., O'Flaherty, B., Sinha, S., and Yoo, J. ). Journal of Urban Economics. 2018. Volume 108. [<a href="https://www.sciencedirect.com/science/article/pii/S0094119018300755" target="_blank">Paper</a>]
+                <li class="paper" words="">
+                    <strong> Extended Market Drivers of CIP Deviations In Korea’s Cross-Currency Swap Markets. </strong> (with F.O. Olarewaju ) [<a href="https://www.earticle.net/Article/A385560" target="_blank">Paper</a>]
                 </li>
                 </ul>
 
