--- a/research.html
+++ b/research.html
@@ -72,6 +72,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li class="paper" words="">
                     <strong> Extended Market Drivers of CIP Deviations In Korea’s Cross-Currency Swap Markets. </strong> (with F.O. Olarewaju ) [<a href="https://www.earticle.net/Article/A385560" target="_blank">Paper</a>]
                 </li>
+			This study seeks to explore the peculiar impact of critical indicators: dollar index, oil price, sovereign credit default swap (CDS), 
+			stock market returns and Libor-OIS on the Korean won (KRW) cross-currency basis (CCB) at the maturity of 1-and- 5-years by segregating the timeframe from March 2003 to September 2019 into four periods: 
+			before the global financial crisis (GFC), during GFC, during eurozone crisis and after the crisis. 
+			Hence, for this time series data, simple linear regression with ARMA errors is employed to determine the direction and magnitude of regressors’ 
+			impact on KRW as well as to deal with possible heteroskedasticity and serial correlation issues. 
+			Vector autoregression (VAR) is used to obtain forecast error variance (FEV) decomposition to ascertain the dynamic relationship and predictive influence of these variables, especially in the advent of shocks. 
+			It is affirmed that CDS, stocks and Libor-OIS were most significant during GFC. Also, all regressors were relatively significant for the overall dataset with oil having the least impact.
                 </ul>
 
                 <!--
