--- a/research.html
+++ b/research.html
@@ -71,7 +71,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <ul>
                 <li class="paper" words="">
                     <strong> Extended Market Drivers of CIP Deviations In Korea’s Cross-Currency Swap Markets. </strong> (with F.O. Olarewaju ) [<a href="https://www.earticle.net/Article/A385560" target="_blank">Paper</a>]
-                </li>
+                </li> text-align:justify;">
 			This study seeks to explore the peculiar impact of critical indicators: dollar index, oil price, sovereign credit default swap (CDS), 
 			stock market returns and Libor-OIS on the Korean won (KRW) cross-currency basis (CCB) at the maturity of 1-and- 5-years by segregating the timeframe from March 2003 to September 2019 into four periods: 
 			before the global financial crisis (GFC), during GFC, during eurozone crisis and after the crisis. 
