--- a/research.html
+++ b/research.html
@@ -96,8 +96,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         recommendations for arbitrage opportunities in the fixed income and foreign exchange derivatives markets.
 		</li>
 		<br>
-		<li class="paper" words="Tax havens, tax evasion, tax avoidance, tax elusion, multinational taxation, public economics">
-                    <strong> The tax-price elasticity of offshore tax elusion: evidence from Ecuadorian transaction data </strong> [<a href="/files/brounstein_taxelusionecuador_unuwider_202112.pdf" target="_blank">Paper</a>]
+		<li class="paper" words="">
+                    <strong> Financial Market Linkages in Crises: Evidence from Asia-Pacific and US </strong> [Draft soon]
+			
+			It is well known that financial crises reveal vulnerabilities in the financial system, which worsens when markets are highly linked. 
+			We study the linkages of financial markets amid major crisis periods like Covid 19 by examining the linkages and dynamics of the United States and eight Asia-pacific stock markets 
+			(Japan, China, India, Indonesia, Korea, New Zealand, Australia, and Singapore). Our main results are as follows: In the precrisis period, there were credible linkages between the markets as 
+			confirmed by the presence of cointegrating relationships. However, the linkages between the US and Asia-pacific markets became much more evident and highly significant during and after most crisis periods. 
+			The results suggest that US and Asia-pacific markets are strongly linked, with spillover influences that become particularly strong during crises.
                 </li>
 		<br>
                 <li class="paper" words="Estate taxation, tax avoidance, charitable giving">
