--- a/research.html
+++ b/research.html
@@ -97,8 +97,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</li>
 		<br>
 		<li class="paper" words="">
-                    <strong> Financial Market Linkages in Crises: Evidence from Asia-Pacific and US </strong> [Draft soon]
-			
+                    <strong> Financial Market Linkages in Crises: Evidence from Asia-Pacific and US </strong> [Draft soon]	
                 </li>
 			It is well known that financial crises reveal vulnerabilities in the financial system, which worsens when markets are highly linked. 
 			We study the linkages of financial markets amid major crisis periods like Covid 19 by examining the linkages and dynamics of the United States and eight Asia-pacific stock markets 
@@ -106,9 +105,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			confirmed by the presence of cointegrating relationships. However, the linkages between the US and Asia-pacific markets became much more evident and highly significant during and after most crisis periods. 
 			The results suggest that US and Asia-pacific markets are strongly linked, with spillover influences that become particularly strong during crises.
 		<br>
-                <li class="paper" words="Estate taxation, tax avoidance, charitable giving">
-                    <strong> Estate tax avoidance and private benefit through charitable giving </strong> [<a href="/files/brounstein_estatetaxavoidancecharitablegiving_202206_wp.pdf" target="_blank">Paper</a>]
+                <li class="paper" words="">
+                    <strong> Deviations from Covered and Uncovered Interest Parity: A Literature Survey and Lessons Learned. </strong> [Draft soon]
                 </li>
+			UIP and CIP theory holds true in certain economies, while it remains ineffective in others. The only difference here is time. Before the global financial crisis, 
+			the theory held true but after that time, it has been rejected. 
+			It held true during certain monetary tightening and became ineffective after loosening of monetary policies.
+		<br>
+                <li class="paper" words="">
+                    <strong> Cross Currency Basis Swap Spread Spillover. </strong> [Draft soon]
+                </li>
+			We investigate the relationship between the world’s major cross-currency bases between 2009 and 2020. 
+			Particularly, we employ a VECM and impulse response functions to estimate and test for long-run linkages between the bases and 
+			model how well shocks can be absorbed in the new equilibrium. We find that although cointegrating relationships do exist between the bases, 
+			these equations are very weak and slow to correct themselves after a shock. However, we also find that European bases have been more resistant to shocks since 2015.
                 </ul>
               
                  <br><br>
