--- a/research.html
+++ b/research.html
@@ -97,7 +97,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</li>
 		<br>
 		<li class="paper" words="">
-                    <strong> Financial Market Linkages in Crises: Evidence from Asia-Pacific and US </strong> [Draft soon]
+                    <strong> Financial Market Linkages in Crises: Evidence from Asia-Pacific and US </strong> (with G. Aipoh) [Draft soon]
 			
 			It is well known that financial crises reveal vulnerabilities in the financial system, which worsens when markets are highly linked. 
 			We study the linkages of financial markets amid major crisis periods like Covid 19 by examining the linkages and dynamics of the United States and eight Asia-pacific stock markets 
@@ -107,20 +107,42 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </li>
 		<br>
                 <li class="paper" words="">
-                    <strong> Deviations from Covered and Uncovered Interest Parity: A Literature Survey and Lessons Learned. </strong> [Draft soon]
+                    <strong> Deviations from Covered and Uncovered Interest Parity: A Literature Survey and Lessons Learned. </strong> (with N. Augustine, F. Olanrewaju, and G. Aipoh [Draft soon]
 			
 			UIP and CIP theory holds true in certain economies, while it remains ineffective in others. The only difference here is time. Before the global financial crisis, 
 			the theory held true but after that time, it has been rejected. It held true during certain monetary tightening and became ineffective after loosening of monetary policies.
                 </li>	
 		<br>
                 <li class="paper" words="">
-                    <strong> Cross Currency Basis Swap Spread Spillover. </strong> [Draft soon]
+                    <strong> Cross Currency Basis Swap Spread Spillover. </strong> (with N. Okafor) [Draft soon]
 			
 			We investigate the relationship between the world’s major cross-currency bases between 2009 and 2020. 
 			Particularly, we employ a VECM and impulse response functions to estimate and test for long-run linkages between the bases and 
 			model how well shocks can be absorbed in the new equilibrium. We find that although cointegrating relationships do exist between the bases, 
 			these equations are very weak and slow to correct themselves after a shock. However, we also find that European bases have been more resistant to shocks since 2015.
                 </li>
+		<br>
+                <li class="paper" words="">
+                    <strong> Hedging the Hedges – Can Gold Mitigate Basis Risk. </strong> (with N. Augustine and F. Olanrewaju) [Draft soon]
+			
+			This paper examines the protective role of gold in the cross-currency swap market. 
+			By taking the perspective of a dollar agent, we present novel empirical evidence into the investigation of gold as a hedge or haven against the marked-to-market risk 
+			of using cross-currency basis swaps, otherwise known as basis risk, to hedge against exposure to foreign fixed income market in selected Asian and G-10 countries. 
+			Following Baur & McDermott, (Journal of Banking and Finance 2010), we perform a GARCH based econometric analysis and find that gold is often a weak hedge, 
+			weak safe haven and diversifier for the basis, implying that dollar agents with exposure to foreign bond markets via cross-currency swaps can to some extent 
+			limit the risk of unfavourable basis movements (basis risk) by positioning in gold. We also present policy recommendations.
+                </li>
+		<br>
+                <li class="paper" words="">
+                    <strong> 6.	Dynamics of Oil Price and Currency Hedging. </strong> (with A. Adekanmbi and F. Olanrewaju) [Draft soon]
+			
+			How does the cross-currency basis of a major oil-importing country, China, respond to changes in oil price when dealing with volatility and dynamic 
+			fluctuations in global factors such as exchange rate and variations in banking and credit risks? This research intends to answer this question by adopting 
+			Markov switching and threshold models coupled with standard impulse response and variance decomposition techniques. 
+			Findings reveal that currency hedging intensifies alongside tighter dollar-yuan basis when oil prices increase, otherwise hedging activities reduce and 
+			the basis widens, that is, inverse oil-basis relation in the low oil price regime. This indicates non-uniform and regime-dependent relationship between changes 
+			in oil prices and the dollar-yuan basis where oil price changes have more importance for the basis.
+		</li>
                 </ul>
               
                  <br><br>
