--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <strong>Working Papers</strong><br/>
 		<ul>
                 <li>
-                    <strong> A New Testable Theory on Deviations from Covered Interest Rate Parity </strong> (R&R Journal of Derivatives). [<a href="https://ssrn.com/abstract=4157839" target="_blank">Paper</a>]
+                    <strong> A New Testable Theory on Deviations from Covered Interest Rate Parity </strong> (R&R Journal of Derivatives). [<a href="https://ssrn.com/abstract=4157839" target="_blank">Paper</a>]<br/>
                 
 			I propose an approximate closed-form model that captures the drivers of deviations from covered interest rate parity (CIP). The model relies on the assumption that a rational agent can
                         invest in a risky domestic bond (e.g., euro (EUR) bond) and in a risky foreign bond (e.g., dollar (USD) bond) hedged into EUR using cross-currency swaps, where
@@ -97,7 +97,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</li>
 		<br>
 		<li class="paper" words="">
-                    <strong> Financial Market Linkages in Crises: Evidence from Asia-Pacific and US </strong> (with G. Aipoh) [Draft soon]
+                    <strong> Financial Market Linkages in Crises: Evidence from Asia-Pacific and US </strong> (with G. Aipoh) [Draft soon]<br/>
 			
 			It is well known that financial crises reveal vulnerabilities in the financial system, which worsens when markets are highly linked. 
 			We study the linkages of financial markets amid major crisis periods like Covid 19 by examining the linkages and dynamics of the United States and eight Asia-pacific stock markets 
@@ -107,7 +107,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </li>
 		<br>
                 <li class="paper" words="">
-                    <strong> Deviations from Covered and Uncovered Interest Parity: A Literature Survey and Lessons Learned. </strong> (with N. Augustine, F. Olanrewaju, and G. Aipoh [Draft soon]
+                    <strong> Deviations from Covered and Uncovered Interest Parity: A Literature Survey and Lessons Learned. </strong> (with N. Augustine, F. Olanrewaju, and G. Aipoh) [Draft soon]<br/>
 			
 			UIP and CIP theory holds true in certain economies, while it remains ineffective in others. The only difference here is time. Before the global financial crisis, 
 			the theory held true but after that time, it has been rejected. It held true during certain monetary tightening and became ineffective after loosening of monetary policies.
