--- a/research.html
+++ b/research.html
@@ -114,7 +114,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </li>	
 		<br>
                 <li class="paper" words="">
-                    <strong> Cross Currency Basis Swap Spread Spillover. </strong> (with N. Okafor) [Draft soon]
+                    <strong> Cross Currency Basis Swap Spread Spillover. </strong> (with N. Okafor) [Draft soon]<br/>
 			
 			We investigate the relationship between the world’s major cross-currency bases between 2009 and 2020. 
 			Particularly, we employ a VECM and impulse response functions to estimate and test for long-run linkages between the bases and 
@@ -123,7 +123,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </li>
 		<br>
                 <li class="paper" words="">
-                    <strong> Hedging the Hedges – Can Gold Mitigate Basis Risk. </strong> (with N. Augustine and F. Olanrewaju) [Draft soon]
+                    <strong> Hedging the Hedges – Can Gold Mitigate Basis Risk. </strong> (with N. Augustine and F. Olanrewaju) [Draft soon]<br/>
 			
 			This paper examines the protective role of gold in the cross-currency swap market. 
 			By taking the perspective of a dollar agent, we present novel empirical evidence into the investigation of gold as a hedge or haven against the marked-to-market risk 
@@ -134,7 +134,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </li>
 		<br>
                 <li class="paper" words="">
-                    <strong> 6.	Dynamics of Oil Price and Currency Hedging. </strong> (with A. Adekanmbi and F. Olanrewaju) [Draft soon]
+                    <strong> 6.	Dynamics of Oil Price and Currency Hedging. </strong> (with A. Adekanmbi and F. Olanrewaju) [Draft soon]<br/>
 			
 			How does the cross-currency basis of a major oil-importing country, China, respond to changes in oil price when dealing with volatility and dynamic 
 			fluctuations in global factors such as exchange rate and variations in banking and credit risks? This research intends to answer this question by adopting 
