--- a/research.html
+++ b/research.html
@@ -134,7 +134,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </li>
 		<br>
                 <li class="paper" words="">
-                    <strong> 6.	Dynamics of Oil Price and Currency Hedging. </strong> (with A. Adekanmbi and F. Olanrewaju) [Draft soon]<br/>
+                    <strong> Dynamics of Oil Price and Currency Hedging. </strong> (with A. Adekanmbi and F. Olanrewaju) [Draft soon]<br/>
 			
 			How does the cross-currency basis of a major oil-importing country, China, respond to changes in oil price when dealing with volatility and dynamic 
 			fluctuations in global factors such as exchange rate and variations in banking and credit risks? This research intends to answer this question by adopting 
@@ -142,6 +142,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			Findings reveal that currency hedging intensifies alongside tighter dollar-yuan basis when oil prices increase, otherwise hedging activities reduce and 
 			the basis widens, that is, inverse oil-basis relation in the low oil price regime. This indicates non-uniform and regime-dependent relationship between changes 
 			in oil prices and the dollar-yuan basis where oil price changes have more importance for the basis.
+		</li>
+		<br>
+                <li class="paper" words="">
+                    <strong> Connectedness of G10 Cross-Currency Basis Swaps. </strong> (with G. Aipoh and F. Olanrewaju) [Draft soon]<br/>
+			
+			This paper empirically examines how connected major cross-currency basis markets have become, which basis markets are the main giver of shocks to other markets and which ones are the main recipient of shocks from other markets. 
+			To do this, we use Diebold-Yilmaz measure to examine the degree of connectedness of the G10 cross-currency basis swap spreads. 
+			At all phases of connectedness considered, we document that EUR/USD basis is the most dominant net giver of shocks to other basis swaps and least recipient 
+			of shocks from others whereas the USD bases for the following currencies: NZD, JPY, DKK, NOK, GBP, AUD, SEK and CAD show evidence of alternating between positive 
+			and negative net connectedness values. We conclude that in the comity of G10 bases, the euro basis is the most important to track for the purposes of currency 
+			risk management when hedging foreign exchange exposures using cross-currency swaps.
+		</li>
+		<br>
+                <li class="paper" words="">
+                    <strong> 8.	Twin Deficits versus Ricardian Hypothesis: Evidence from the World. </strong> (with Olanrewaju, F. and Lokossou, J) [Draft soon]<br/>
+			
+			Given the prevalent contentions regarding evidence for the twin deficits, twin divergence or Ricardian hypothesis across countries, 
+			this paper empirically establishes which hypothesis has more support on a broader scale across a large panel of countries. 
+			We find that the twin deficits hypothesis is more broadly supported for the whole panel of countries, and this is also true for the panel of OECD countries, 
+			although to a lower extent. Accordingly, we highlight some policy implications of this outcome and provide recommendations for future studies.
 		</li>
                 </ul>
               
