--- a/research.html
+++ b/research.html
@@ -156,12 +156,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</li>
 		<br>
                 <li class="paper" words="">
-                    <strong> 8.	Twin Deficits versus Ricardian Hypothesis: Evidence from the World. </strong> (with Olanrewaju, F. and Lokossou, J) [Draft soon]<br/>
+                    <strong> Twin Deficits versus Ricardian Hypothesis: Evidence from the World. </strong> (with Olanrewaju, F. and Lokossou, J.) [Draft soon]<br/>
 			
 			Given the prevalent contentions regarding evidence for the twin deficits, twin divergence or Ricardian hypothesis across countries, 
 			this paper empirically establishes which hypothesis has more support on a broader scale across a large panel of countries. 
 			We find that the twin deficits hypothesis is more broadly supported for the whole panel of countries, and this is also true for the panel of OECD countries, 
 			although to a lower extent. Accordingly, we highlight some policy implications of this outcome and provide recommendations for future studies.
+		</li>
+		<br>
+                <li class="paper" words="">
+                    <strong> The Effects of Financial Capital Flows on Domestic Investment: New Evidence. </strong> (with Thompson, O.) [Draft soon]<br/>
+			
+			Using 70 developing and 23 developed countries, this study examines the effect of capital inflows on domestic investment in host economies between 
+			2000 and 2017 considering the high inflow of FDI since year 2000 especially into emerging economies. 
+			The empirical results show that capital flows of FDI, portfolio investments and total capital flows have not actually increase domestic investment 
+			in the host economies. Hence, policymakers in emerging economies should reduce emphasis of policies aim at increasing domestic investment from FDI and 
+			portfolio investments.   
+		</li>
+		<br>
+                <li class="paper" words="">
+                    <strong> Macroeconomic Determinants of Stock Market Performance in Nigeria. </strong> [Draft soon]<br/>
+			
+			This is my undergraduate thesis back in 2017/2018 where I studied the Macroeconomic Determinants of Stock Market Performance in Nigeria for the period of 1981-2017 and 
+			documented the importance of stronger economic performance for a more buoyant and sustainable creation of wealth and value in the domestic stock market.
 		</li>
                 </ul>
               
@@ -169,12 +186,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               
               <strong>Works-in-progress</strong><br/>
                 <ul>
-                <li class="paper" words="Pink tax, Gender inequality, Gender wage gap">
-                    <strong> The Pink Tax: Gender Inequalities in Consumption and the Real Wage Gap </strong> (with <a href="https://kayleighnb.github.io/" target="_blank">Barnes, K.</a>) [Draft soon]
-                </li>
-		<br>
-		    <li class="paper" words="Homelessness, Housing, Public programs, Fiscality">
-                    <strong> The fiscality of housing the homeless </strong> (with Wieselthier, J.) [Draft soon]
+                <li class="paper" words="">
+                    <strong> Value and Wealth Creation: Does Higher Female Board Membership Cause Higher Shareholder Wealth?  </strong> <br/>
+			
+			This corporate finance research is a work in progress, not yet a working paper; so, no abstract has been developed yet.
                 </li>	
                 </ul>
                  <br><br>
