--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<br>
 		<dd><a href="https://scholar.google.com/citations?hl=en&user=TeEJFxQAAAAJ&view_op=list_works&gmla=AJsN-F6zDYxf3144Lx9wyARTtcuLxG0MB1Fr8JqB8VKb9tn1V8Z9twCyws3IyKWC7rVOAwHo_KGGp1BKe_NccB55aqTO600VHC25_TzaGGhORNIKVERatyzPSqdW0-FKduEBULMC-zqekvw-nVQkKHkF0rg8FKe7_XUAfdFrtRx015DaWwuMEpk&iaan=Abdulmuttolib+Babatunde+Salako" target="_blank">Google Scholar</a></dd>
 		<br>   
-		<dd><a href="https://twitter.com/MuttolibSalako" target="_blank">Twitter</a></dd>
+		<dd><a href="www.linkedin.com/in/abdulmuttolibsalako" target="_blank">LinkedIn</a></dd>
 		 
               <!-- <dd><a href="#">LinkedIn</a></dd> -->
             </div>
