--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<ul class="nav navbar-nav">
               <li><a style="color:#e01709" href="index.html">Home</a></li>
               <li><a href="research.html">Research</a></li> 
+	      <li><a href="resources.html">Resources</a></li>
 		</ul>
 	  </div>
 	</nav>
