--- a/resources.html
+++ b/resources.html
@@ -66,25 +66,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <!-- Publications -->
             <div class="col-md-8" style="min-height: 100vh; height: auto;">    
-                <h2 id="publications">Non-econ miscellanea</h2>
+                <h2 id="publications">RESOURCES</h2>
             
-                <strong>Select jazz composition charts </strong><br/>
+                <strong> Improving your profile for econ(or finance) PhD (especially if you have an undergrad degree from Africa) </strong><br/>
                 <ul>
                 <li class="paper">
-                    Envelope. 2021. [<a href="/files/music/Envelope.pdf" target="_blank">Lead sheet</a>] [<a href="/files/music/brounstein_envelope_midi.wav" target="_blank">Midi recording</a>]
-                </li>
-                <li class="paper">
-                    Alone in a breeze. 2020. [<a href="/files/music/brounstein_aloneinabreeze.pdf" target="_blank">Lead sheet</a>] [<a href="/files/music/brounstein_aloneinabreeze_midi.wav" target="_blank">Midi recording</a>]
-                </li>
-                <li class="paper">
-                    Light gray. 2019. [<a href="/files/music/light_gray.pdf" target="_blank">Lead sheet</a>]
+                    Baum Tenpers Research.[<a href="https://baumtenpers.com/" target="_blank">Link</a>]
                 </li>
                 </ul>
 
-                <strong>In the classical idiom</strong><br/>
+                <strong>General grad school resources</strong><br/>
                 <ul>
                 <li class="paper">
-                    Menuet pour un pauvre enfant terrible. 2020. [<a href="/files/music/menuet_pour_un_enfant_terrible_brounstein_final.pdf" target="_blank">Sheet music</a>]
+                    Coming soon.
                 </li>
                 </ul>
 		    
