--- a/resources.html
+++ b/resources.html
@@ -71,7 +71,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <strong> Improving your profile for econ(or finance) PhD (especially if you have an undergrad degree from Africa) </strong><br/>
                 <ul>
                 <li class="paper">
-                    Baum Tenpers Research. [<a href="https://baumtenpers.com/" target="_blank">Link</a>]<br/>
+                    Baum Tenpers Research Insititute [<a href="https://baumtenpers.com/" target="_blank">Link</a>]<br/>
 		    They are an independent research and training organization who are committed to support and train high achieving African students with research, technical, and
 		    quantitiative skills that are sin-qua-non to the success in quantitative fields (econ and finance included) across top institutions in the US, UK, Europe and Asia.
                 </li>
