--- a/resources.html
+++ b/resources.html
@@ -65,14 +65,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row">
 
             <!-- Publications -->
-            <div class="col-md-8" style="min-height: 100vh; height: auto;">    
+            <div class="col-md-8" style="min-height: 100vh; height: auto; text-align:justify;">    
                 <h2 id="publications">RESOURCES</h2>
             
-                <strong> Improving your profile for econ(or finance) PhD (especially if you have an undergrad degree from Africa) </strong><br/>
+                <strong> Improving your profile for econ and finance PhD (especially if you have an undergrad degree from Africa) </strong><br/>
                 <ul>
                 <li class="paper">
                     Baum Tenpers Research Insititute [<a href="https://baumtenpers.com/" target="_blank">Link</a>]<br/>
-		    They are an independent research and training organization who are committed to support and train high achieving African students with research, technical, and
+		    They are an independent research and training organization who are committed to supporting and training high achieving African students with research, technical, and
 		    quantitiative skills that are sin-qua-non to the success in quantitative fields (econ and finance included) across top institutions in the US, UK, Europe and Asia.
                 </li>
                 </ul>
