--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <nav class="navbar navbar-inverse">
       <div class="container">
 		<ul class="nav navbar-nav">
-              <li><a style="color:#e01709" href="index.html">Home</a></li>
+              <li><a style="color:#e01709" href="index.html">Abdulmuttolib Salako</a></li>
               <li><a href="research.html">Research</a></li> 
 	      <li><a href="resources.html">Resources</a></li>
 		</ul>
@@ -59,11 +59,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   
   <!-- Page Content -->
     <div class="container">
-
-	<!-- Name of Page -->
-            <div class="col-md-4">
-                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Abdulmuttolib Salako</b></div><br>
-	    </div>
 	    
         <div class="row">
 
