--- a/research.html
+++ b/research.html
@@ -51,7 +51,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <nav class="navbar navbar-inverse">
         <div class="container">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Abdulmuttolib Salako</a></li>
                 <li><a style="color:#e01709" href="research.html">Research</a></li>
 		<li><a href="resources.html">Resources</a></li>
             </ul>
