--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	    <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
                 <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"></div><br>
-                <p><b>abdulmuttolibbabatunde.salako[at]wmich.edu</b><br>
-		<p><b>salakomuttolib[at]gmail.com</b><br>
                 <p>MA Student in Applied Economics<br>
 		Department of Economics<br>
-                Western Michigan University<br>
+                Western Michigan University<br><p><b>abdulmuttolibbabatunde.salako[at]wmich.edu</b><br>
+		<p><b>salakomuttolib[at]gmail.com</b><br>
+		<p><b>abdulmuttolibbabatunde.salako[at]wmich.edu</b><br>
+		<p><b>salakomuttolib[at]gmail.com</b><br>
                 </p>
 	    </div>
 	    
