--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"></div><br>
                 <p>MA Student in Applied Economics<br>
 		Department of Economics<br>
-                Western Michigan University<br><p><b>abdulmuttolibbabatunde.salako[at]wmich.edu</b><br>
-		<p><b>salakomuttolib[at]gmail.com</b><br>
+                Western Michigan University<br><p><b>
 		<p><b>abdulmuttolibbabatunde.salako[at]wmich.edu</b><br>
 		<p><b>salakomuttolib[at]gmail.com</b><br>
                 </p>
