--- a/research.html
+++ b/research.html
@@ -71,7 +71,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <strong>Published Articles</strong><br/>
                 <ul>
                 <li class="paper" words="">
-                    <strong> Extended Market Drivers of CIP Deviations In Korea’s Cross-Currency Swap Markets </strong> (with F.O. Olarewaju). [<a href="https://www.earticle.net/Article/A385560" target="_blank">Paper</a>]
+                    <strong> Extended Market Drivers of CIP Deviations In Korea’s Cross-Currency Swap Markets </strong> (with F.O. Olarewaju). [<a href="http://journal.korfin.org/sub/journal_detail.html?code=385560&search=&year=&issueCode=&searchType=" target="_blank">Paper</a>]
                
 			We explore the peculiar impact of critical indicators: dollar index, oil price, sovereign credit default swap (CDS), stock market returns, and Libor-OIS on the Korean won (KRW) 
 			cross-currency basis (CCB) at the maturity of 1-and 5-years by segregating the timeframe into four periods: before the global financial crisis (GFC), during GFC, during eurozone crisis and after the crisis. 
