--- a/resources.html
+++ b/resources.html
@@ -72,8 +72,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <ul>
                 <li class="paper">
                     Baum Tenpers Research Insititute [<a href="https://baumtenpers.com/" target="_blank">Link</a>]<br/>
-		    They are an independent research and training organization who are committed to supporting and training high achieving African students with research, technical, and
-		    quantitiative skills that are sin-qua-non to the success in quantitative fields (econ and finance included) across top institutions in the US, UK, Europe and Asia.
+		    They are an independent research and training organization who are committed to supporting and training high achieving African students in research, technical, and
+		    quantitiative skills that are sine qua non to success in a PhD program in quantitative fields (econ and finance included) across top institutions in the US, UK, Europe and Asia.
                 </li>
                 </ul>
 
