--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<dd><a href="https://scholar.google.com/citations?hl=en&user=TeEJFxQAAAAJ&view_op=list_works&gmla=AJsN-F6zDYxf3144Lx9wyARTtcuLxG0MB1Fr8JqB8VKb9tn1V8Z9twCyws3IyKWC7rVOAwHo_KGGp1BKe_NccB55aqTO600VHC25_TzaGGhORNIKVERatyzPSqdW0-FKduEBULMC-zqekvw-nVQkKHkF0rg8FKe7_XUAfdFrtRx015DaWwuMEpk&iaan=Abdulmuttolib+Babatunde+Salako" target="_blank">Google Scholar</a></dd>
 		<br>   
 		<dd><a href="https://www.linkedin.com/in/abdulmuttolibsalako/" target="_blank">LinkedIn</a></dd>
-		 
+		 <a href="https://info.flagcounter.com/BQMm"><img src="https://s11.flagcounter.com/count/BQMm/bg_FFFFFF/txt_000000/border_CCCCCC/columns_4/maxflags_20/viewers_3/labels_1/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
               <!-- <dd><a href="#">LinkedIn</a></dd> -->
             </div>
           
